fix gallery not showing on mobile screens + fix scroll behavior for mobile screens

--- a/src/css/product-details.css
+++ b/src/css/product-details.css
@@ -230,13 +230,16 @@ td.specification-data {
 
     .product-images .product-gallery {
         flex-direction: row;
-        justify-content: center;
         width: 100%;
         gap: 1rem;
     }
 
-    .gallery-image {
-        width: 70px;
+    .product-images {
+        max-height: 500px;
+    }
+
+    .gallery-image>img {
+        width: 60px;
     }
 
     .category {
